--- a/conference/www/index.html
+++ b/conference/www/index.html
@@ -14,13 +14,21 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <!-- This is necessary for this tut to work -->
+    <script src="lib/ionic/js/angular/angular-resource.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <!-- OpenFB -->
+    <script src="js/openfb.js"></script>
+    <script src="js/ngopenfb.js" ></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <!-- Tutorial js -->
+    <script src="js/services.js"></script>
+
   </head>
 
   <body ng-app="starter">
